--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "localtunnel": "^2.0.2",
     "node-fetch": "^3.3.2",
     "twilio": "^5.1.0"
   }
