clearing changes and added env

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "body-parser": "^1.20.2",
     "btoa": "^1.2.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "localtunnel": "^2.0.2",
     "node-fetch": "^3.3.2",
     "twilio": "^5.1.0"
   }
